[gd_scene load_steps=18 format=3 uid="uid://dgqv557rkneh1"]

[ext_resource type="Texture2D" uid="uid://hvo3e7qbnxh7" path="res://assets/H2/H2.png" id="1_bj05l"]
[ext_resource type="Script" path="res://scenes/game_scene/h_2.gd" id="2_2syxt"]
[ext_resource type="Script" path="res://scenes/components/to_other_scene_area.gd" id="3_4mycp"]
[ext_resource type="PackedScene" uid="uid://bhld7705jd12u" path="res://scenes/components/collectable.tscn" id="3_qe1f4"]
[ext_resource type="Texture2D" uid="uid://b3ftxd5v3ttut" path="res://assets/H2/door.png" id="3_wg6ar"]
[ext_resource type="Texture2D" uid="uid://t2k4xw6kdqin" path="res://assets/H2/key.png" id="4_e34pn"]
[ext_resource type="Shader" path="res://scenes/game_scene/h_2_door.gdshader" id="4_ph00d"]
[ext_resource type="PackedScene" uid="uid://b4epcnt4i7heh" path="res://scenes/components/dialog_box.tscn" id="12_s3f82"]

[sub_resource type="Animation" id="Animation_mymok"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ToH2A/Door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, -220)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ToH2A/Door:material:shader_parameter/percent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8t4br"]
resource_name = "open_the_door"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ToH2A/Door:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(20, -220), Vector2(-200, -220)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ToH2A/Door:material:shader_parameter/percent")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1.7411),
"update": 0,
"values": [0.2, 1.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show_way"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_shqgw"]
_data = {
"RESET": SubResource("Animation_mymok"),
"open_the_door": SubResource("Animation_8t4br")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4rrs6"]
radius = 60.2993

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6i1cq"]
shader = ExtResource("4_ph00d")
shader_parameter/percent = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2rgnh"]
size = Vector2(225, 390)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6wj3"]
size = Vector2(301, 537.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_74a78"]
radius = 69.1158

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xw1dp"]
size = Vector2(348, 568)

[node name="H2" type="Sprite2D"]
position = Vector2(960, 540)
texture = ExtResource("1_bj05l")
script = ExtResource("2_2syxt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_shqgw")
}

[node name="ToH1" type="Area2D" parent="."]
script = ExtResource("3_4mycp")
scene_path = "res://scenes/game_scene/h_1.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToH1"]
position = Vector2(-674, -333)
shape = SubResource("CircleShape2D_4rrs6")

[node name="ToH2A" type="Area2D" parent="."]
script = ExtResource("3_4mycp")
scene_path = "res://scenes/game_scene/h_2a.tscn"

[node name="Door" type="Sprite2D" parent="ToH2A"]
material = SubResource("ShaderMaterial_6i1cq")
position = Vector2(20, -220)
texture = ExtResource("3_wg6ar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToH2A"]
position = Vector2(37.5, -213)
shape = SubResource("RectangleShape2D_2rgnh")

[node name="ToH3" type="Area2D" parent="."]
visible = false
script = ExtResource("3_4mycp")
scene_path = "res://scenes/game_scene/h_3.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToH3"]
position = Vector2(37.5, -213)
shape = SubResource("RectangleShape2D_2rgnh")

[node name="ToH4" type="Area2D" parent="."]
script = ExtResource("3_4mycp")
scene_path = "res://scenes/game_scene/h_4.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToH4"]
position = Vector2(810, -56)
shape = SubResource("RectangleShape2D_n6wj3")

[node name="Key" parent="." instance=ExtResource("3_qe1f4")]

[node name="Sprite2D" type="Sprite2D" parent="Key"]
position = Vector2(85, 476.5)
texture = ExtResource("4_e34pn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key"]
position = Vector2(80, 473.5)
shape = SubResource("CircleShape2D_74a78")

[node name="Granny" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Granny"]
position = Vector2(-419, -32)
shape = SubResource("RectangleShape2D_xw1dp")

[node name="DialogBox" parent="." instance=ExtResource("12_s3f82")]
visible = false
offset_left = -210.0
offset_top = 34.0
offset_right = -210.0
offset_bottom = 34.0

[connection signal="input_event" from="Granny" to="." method="_on_granny_input_event"]
